removed pyQT requirement where unnecesary

--- a/notebooks/EELS/Edge_Onset.ipynb
+++ b/notebooks/EELS/Edge_Onset.ipynb
@@ -92,7 +92,7 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n",
-      "pyTEM version:  0.2020.10.3\n"
+      "pyTEM version:  0.2020.12.0\n"
      ]
     }
    ],
@@ -104,10 +104,11 @@
     "\n",
     "import sys\n",
     "sys.path.insert(0,'../pyTEMlib/')\n",
+    "\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft\n",
-    "import pyTEMlib.eels_tools  as eels        # EELS methods \n",
-    "import pyTEMlib.interactive_eels as ieels  # Dialogs for EELS input and quantification\n",
+    "#import pyTEMlib.eels_tools  as eels        # EELS methods \n",
+    "#import pyTEMlib.interactive_eels as ieels  # Dialogs for EELS input and quantification\n",
     "\n",
     "import scipy\n",
     "\n",
