shorter EELS notebook for QT only

--- a/notebooks/4_0_EELS_Tools.ipynb
+++ b/notebooks/4_0_EELS_Tools.ipynb
@@ -28,8 +28,8 @@
     "\n",
     "Usage of the Image Tools of [pyTEMlib](_pyTEMlib.ipynb)\n",
     "\n",
-    "## [Low-Loss Spectra](Analyse_Low-Loss.ipynb)\n",
-    "## [Core-Loss Spectra](Analyse_Core-Loss.ipynb)\n",
+    "## [Low-Loss Spectra](EELS/Analyse_Low-Loss.ipynb)\n",
+    "## [Core-Loss Spectra](EELS/Analysis_Core_Loss.ipynb)\n",
     "## [Low-Loss Spectral Images](Analyse_Low-Loss_Spectral_Images.ipynb)\n",
     "## [Core-Loss Spectral Images](Analyse_Core-Loss_Spectral_Images.ipynb)\n"
    ]
