--- a/notebooks/Imaging/Image_Tools.ipynb
+++ b/notebooks/Imaging/Image_Tools.ipynb
@@ -41,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -55,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.11"
   },
   "toc": {
    "base_numbering": "3",
