--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -83,6 +83,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting https://github.com/pycroscopy/pyTEMlib/master/\n",
+      "\u001b[31m  ERROR: HTTP error 404 while getting https://github.com/pycroscopy/pyTEMlib/master/\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: Could not install requirement https://github.com/pycroscopy/pyTEMlib/master/ because of HTTP error 404 Client Error: Not Found for url: https://github.com/pycroscopy/pyTEMlib/master/ for URL https://github.com/pycroscopy/pyTEMlib/master/\u001b[0m\u001b[31m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "!{sys.executable} -m pip install https://github.com/pycroscopy/pyTEMlib/master/"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "hideCode": false,
@@ -105,7 +126,9 @@
      "output_type": "stream",
      "text": [
       "Symmetry functions of spglib enabled\n",
-      "pyTEM version:  0.2022.9.1\n"
+      "SimpleITK not installed; Registration Functions for Image Stacks not available\n",
+      "install with: conda install -c simpleitk simpleitk \n",
+      "pyTEM version:  0.2022.11.0\n"
      ]
     }
    ],
@@ -3456,7 +3479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
