new dmReader od ScifiReaders

--- a/notebooks/Imaging/Adaptive_Fourier_Filter.ipynb
+++ b/notebooks/Imaging/Adaptive_Fourier_Filter.ipynb
@@ -205,38 +205,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'0.0.7'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pyNSID\n",
-    "pyNSID.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You attempted to load a Gwyddion file, but this requires gwyfile.\n",
-      "     Please Load it with pip install gwyfile\n",
-      "You attempted to load a Nanonis file, but this requires Nanonispy.\n",
-      "     Please Load it with pip install nanonispy\n",
-      "You attempted to load a Nanonis file, but this requires Nanonispy.\n",
-      "     Please Load it with pip install nanonispy\n",
       "Symmetry functions of spglib enabled\n",
-      "pyTEMlib version:  0.2022.12.0\n"
+      "SimpleITK not installed; Registration Functions for Image Stacks not available\n",
+      "install with: conda install -c simpleitk simpleitk \n",
+      "pyTEMlib version:  0.2022.12.1\n"
      ]
     }
    ],
@@ -275,27 +250,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf534ec0f6c84863b6b1a826e5c1e8d2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Dropdown(description='select dataset:', options=('Channel_000: HAADF', 'Channel_001: HAADF'), value='Channel_0…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file type not handled yet.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Need hdf5 group or sidpy Dataset to determine image choices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m datasets \u001b[38;5;241m=\u001b[39m ft\u001b[38;5;241m.\u001b[39mopen_file()\n\u001b[1;32m----> 2\u001b[0m chooser \u001b[38;5;241m=\u001b[39m \u001b[43mft\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mChooseDataset\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdatasets\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\Github\\pyTEMlib\\notebooks\\Imaging\\../..\\pyTEMlib\\file_tools.py:165\u001b[0m, in \u001b[0;36mChooseDataset.__init__\u001b[1;34m(self, input_object, show_dialog)\u001b[0m\n\u001b[0;32m    163\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdatasets \u001b[38;5;241m=\u001b[39m input_object\n\u001b[0;32m    164\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 165\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mNeed hdf5 group or sidpy Dataset to determine image choices\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    166\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset_names \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    167\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdataset_list \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mValueError\u001b[0m: Need hdf5 group or sidpy Dataset to determine image choices"
+     ]
     }
    ],
    "source": [
     "datasets = ft.open_file()\n",
     "chooser = ft.ChooseDataset(datasets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please use new SciFiReaders Package for full functionality\n",
+      "{'experiment': {}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_name =  '../../example_data/AL-DFoffset0.00.dm3'\n",
+    "datasets = ft.open_file(file_name)"
    ]
   },
   {
