--- a/notebooks/Imaging/Register_Image_Stack.ipynb
+++ b/notebooks/Imaging/Register_Image_Stack.ipynb
@@ -62,11 +62,10 @@
     "        version = '-1'\n",
     "    return version\n",
     "\n",
-    "# pyTEMlib setup ------------------\n",
-    "else:\n",
-    "    if test_package('pyTEMlib') < '0.2023.1.0':\n",
-    "        print('installing pyTEMlib')\n",
-    "        !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
+    "# pyTEMlib setup ----------------\n",
+    "if test_package('pyTEMlib') < '0.2023.1.0':\n",
+    "    print('installing pyTEMlib')\n",
+    "    !{sys.executable} -m pip install  --upgrade pyTEMlib -q\n",
     "# ------------------------------\n",
     "print('done')"
    ]
