--- a/notebooks/4_EELS_Tools.ipynb
+++ b/notebooks/4_EELS_Tools.ipynb
@@ -21,8 +21,9 @@
     "\n",
     "Gerd Duscher\n",
     "\n",
+    "Microscopy Facilities\n",
     "Materials Science & Engineering<br>\n",
-    "Joint Institute of Advanced Materials<br>\n",
+    "Institute of Advanced Materials & Manufacturing<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
     "\n",
@@ -56,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": "3",
