--- a/notebooks/EELS/Analyse_Low_Loss.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -119,6 +119,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Symmetry functions of spglib enabled\n",
+      "Using kinematic_scattering library version {_version_ }  by G.Duscher\n",
       "pyTEM version:  0.2023.4.0\n"
      ]
     }
@@ -158,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false
@@ -280,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05529e7b989744bb8230fb1d380adc89",
+       "model_id": "43b5be1859204b71bcc2894015eed383",
        "version_major": 2,
        "version_minor": 0
       },
@@ -302,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": false,
@@ -327,7 +329,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f45b73a5e8d445cb9c64c27abc9edd42",
+       "model_id": "d0b826ee4f7b4959a28397e39c770c39",
        "version_major": 2,
        "version_minor": 0
       },
