--- a/notebooks/EELS/Analyse_Low_Loss.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss.ipynb
@@ -2207,9 +2207,9 @@
  "metadata": {
   "hide_code_all_hidden": false,
   "kernelspec": {
-   "display_name": "ase",
+   "display_name": "mse",
    "language": "python",
-   "name": "ase"
+   "name": "mse"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2221,7 +2221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": "3",
