--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -75,7 +75,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "installing pyTEMlib\n",
       "done\n"
      ]
     }
@@ -98,7 +97,7 @@
     "if test_package('pyTEMlib') < '0.2023.5.0':\n",
     "    print('installing pyTEMlib')\n",
     "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/SciFiReaders.git@main -q\n",
-    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/pyTEMlib.git@use_dict_2 -q\n",
+    "    !{sys.executable} -m pip install git+https://github.com/pycroscopy/pyTEMlib.git@main -q\n",
     "    \n",
     "# ------------------------------\n",
     "print('done')"
