--- a/notebooks/4_EELS_Tools.ipynb
+++ b/notebooks/4_EELS_Tools.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "Usage of the Image Tools of [pyTEMlib](_pyTEMlib.ipynb)\n",
     "\n",
-    "## [Low-Loss Spectra](EELS/Analyse_Low-Loss.ipynb)\n",
+    "## [Low-Loss Spectra](EELS/Analyse_Low_Loss.ipynb)\n",
     "## [Core-Loss Spectra](EELS/Analysis_Core_Loss.ipynb)\n",
     "## [Low-Loss Spectral Images](Analyse_Low-Loss_Spectral_Images.ipynb)\n",
     "## [Core-Loss Spectral Images](Analyse_Core-Loss_Spectral_Images.ipynb)\n"
@@ -57,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "toc": {
    "base_numbering": "3",
