--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -17,9 +17,10 @@
     "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css\">\n",
     "\n",
     "<!-- Auto width -->\n",
-    "<a href=\"https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb\" download><button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button></a>\n",
+    "[<button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    " \n",
+    "[![ww](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "    https://colab.research.google.com/github/pycroscopy/pyTEMlib/blob/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n",
     "    \n",
     "part of \n",
