--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -7,7 +7,7 @@
     "hidePrompt": true
    },
    "source": [
-    "<font size = \"5\"> **EELS_Tools:  [Spectroscopy](../4_EELS_Tools.ipynb)** </font>\n",
+    "<font size = \"5\"> **EELS_Tools:  [Spectroscopy](../3.ipynb)** </font>\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
@@ -58,7 +58,7 @@
    },
    "source": [
     "\n",
-    "  <a href=\"https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb\" download><button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button></a>\n"
+    "  <a href=\"https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb\" download><button > Download</button></a>\n"
    ]
   },
   {
