--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "source": [
     "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css\">\n",
-    "\n",
+    "nix\n",
     "<!-- Auto width -->\n",
     "[<button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)"
    ]
