--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -46,7 +46,8 @@
    "metadata": {},
    "source": [
     "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css\">\n",
-    "nix\n",
+    "nix2\n",
+    "\n",
     "<!-- Auto width -->\n",
     "[<button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)"
    ]
@@ -58,7 +59,10 @@
    },
    "source": [
     "\n",
-    "  <a href=\"https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb\" download><button > Download</button></a>\n"
+    "[<button > Download</button>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n",
+    "\n",
+    "\n",
+    "[![Download](<button > Download</button>)](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n"
    ]
   },
   {
