--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -17,7 +17,7 @@
     "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css\">\n",
     "\n",
     "<!-- Auto width -->\n",
-    "[<button class=\"btn\"><i class=\"fa fa-download\"></i> Download</button>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n",
+    "[<img src=http://1.bp.blogspot.com/_Px_El909rS4/SVfmPPtz5MI/AAAAAAAAAv4/goc-zs7H9ns/s1600/download.icon, width=150>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb)\n",
     "\n",
     " \n",
     "[![ww](https://colab.research.google.com/assets/colab-badge.svg)](\n",
