update peak dialog

--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -7,16 +7,13 @@
     "hidePrompt": true
    },
    "source": [
-    "<font size = \"5\"> **EELS_Tools:  [Spectroscopy](../3.ipynb)** </font>\n",
+    "<font size = \"5\"> **EELS_Tools:  [Spectroscopy](../4_EELS_Tools.ipynb)** </font>\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
     "# Analysis of Core-Loss EELS Spectra\n",
     "<br>\n",
     "\n",
-    "<link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css\">\n",
-    "\n",
-    "<!-- Auto width -->\n",
     "[<img src=https://www.coeuscreativegroup.com/wp-content/uploads/2020/04/download-button.png, width=125>](https://raw.githubusercontent.com/pycroscopy/pyTEMlib/main/notebooks/EELS/Analysis_Core_Loss.ipynb) \n",
     "\n",
     "[![OpenInColab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
@@ -185,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73eab2189549444e944907da915c18ed",
+       "model_id": "1824cedc141e47e0b21a232e23b6501a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,13 +212,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a0e5a7b28234084b29c7049d17ba89f",
+       "model_id": "2c5392431c15444ea5af084405db8855",
        "version_major": 2,
        "version_minor": 0
       },
