--- a/notebooks/EELS/Analyse_Low_Loss-SI.ipynb
+++ b/notebooks/EELS/Analyse_Low_Loss-SI.ipynb
@@ -256,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0aaf130d37a44c2baff4d237db028ef6",
+       "model_id": "68afed60b5984d4891f97aabcd21035d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,29 +299,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f3cd8dbf4ef49939a164f2148fdca57",
+       "model_id": "87dccb24ced642b79a301f31a59a5f53",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "AppLayout(children=(GridspecLayout(children=(Dropdown(description='Main Dataset:', layout=Layout(grid_area='wi…"
+       "VBox(children=(Dropdown(description='directory:', layout=Layout(width='90%'), options=('c:\\\\Users\\\\gduscher\\\\D…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "TraitError",
+     "evalue": "The 'children' trait of a Tab instance contains an Instance of a TypedTuple which expected a Widget, not the FileWidget at '0x1b8bed66510'.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTraitError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpyTEMlib\u001b[39;00m \u001b[39mimport\u001b[39;00m info_widget\n\u001b[0;32m      2\u001b[0m datasets \u001b[39m=\u001b[39m fileWidget\u001b[39m.\u001b[39mdatasets\n\u001b[1;32m----> 3\u001b[0m infoWidget\u001b[39m=\u001b[39m info_widget\u001b[39m.\u001b[39;49mInfoWidget(datasets)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\Documents\\Github\\pyTEMlib\\notebooks\\EELS\\../..\\pyTEMlib\\info_widget.py:363\u001b[0m, in \u001b[0;36mInfoWidget.__init__\u001b[1;34m(self, datasets)\u001b[0m\n\u001b[0;32m    360\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, datasets):\n\u001b[0;32m    362\u001b[0m     sidebar \u001b[39m=\u001b[39m get_info_sidebar()\n\u001b[1;32m--> 363\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(datasets, sidebar)\n\u001b[0;32m    364\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mset_action()\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\Documents\\Github\\pyTEMlib\\notebooks\\EELS\\../..\\pyTEMlib\\info_widget.py:105\u001b[0m, in \u001b[0;36mEELSWidget.__init__\u001b[1;34m(self, datasets, sidebar, tab_title)\u001b[0m\n\u001b[0;32m    103\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(sidebar, \u001b[39mlist\u001b[39m):\n\u001b[0;32m    104\u001b[0m     tab \u001b[39m=\u001b[39m ipywidgets\u001b[39m.\u001b[39mTab()\n\u001b[1;32m--> 105\u001b[0m     tab\u001b[39m.\u001b[39;49mchildren \u001b[39m=\u001b[39m [ft\u001b[39m.\u001b[39mFileWidget(), sidebar]\n\u001b[0;32m    106\u001b[0m     tab\u001b[39m.\u001b[39mtitles \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mLoad\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mInfo\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m    107\u001b[0m \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:732\u001b[0m, in \u001b[0;36mTraitType.__set__\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m    730\u001b[0m     \u001b[39mraise\u001b[39;00m TraitError(\u001b[39m'\u001b[39m\u001b[39mThe \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m trait is read-only.\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname)\n\u001b[0;32m    731\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 732\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mset(obj, value)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:706\u001b[0m, in \u001b[0;36mTraitType.set\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m    705\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset\u001b[39m(\u001b[39mself\u001b[39m, obj, value):\n\u001b[1;32m--> 706\u001b[0m     new_value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate(obj, value)\n\u001b[0;32m    707\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    708\u001b[0m         old_value \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39m_trait_values[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname]\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:738\u001b[0m, in \u001b[0;36mTraitType._validate\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m    736\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n\u001b[0;32m    737\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mvalidate\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 738\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalidate(obj, value)\n\u001b[0;32m    739\u001b[0m \u001b[39mif\u001b[39;00m obj\u001b[39m.\u001b[39m_cross_validation_lock \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:\n\u001b[0;32m    740\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cross_validate(obj, value)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:2871\u001b[0m, in \u001b[0;36mContainer.validate\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m   2868\u001b[0m \u001b[39mif\u001b[39;00m value \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2869\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n\u001b[1;32m-> 2871\u001b[0m value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalidate_elements(obj, value)\n\u001b[0;32m   2873\u001b[0m \u001b[39mreturn\u001b[39;00m value\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:2883\u001b[0m, in \u001b[0;36mContainer.validate_elements\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m   2881\u001b[0m     v \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_trait\u001b[39m.\u001b[39m_validate(obj, v)\n\u001b[0;32m   2882\u001b[0m \u001b[39mexcept\u001b[39;00m TraitError \u001b[39mas\u001b[39;00m error:\n\u001b[1;32m-> 2883\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror(obj, v, error)\n\u001b[0;32m   2884\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   2885\u001b[0m     validated\u001b[39m.\u001b[39mappend(v)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:823\u001b[0m, in \u001b[0;36mTraitType.error\u001b[1;34m(self, obj, value, error, info)\u001b[0m\n\u001b[0;32m    812\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    813\u001b[0m             error\u001b[39m.\u001b[39margs \u001b[39m=\u001b[39m (\n\u001b[0;32m    814\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mThe \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m trait contains \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m which \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    815\u001b[0m                 \u001b[39m\"\u001b[39m\u001b[39mexpected \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m, not \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    821\u001b[0m                 ),\n\u001b[0;32m    822\u001b[0m             )\n\u001b[1;32m--> 823\u001b[0m     \u001b[39mraise\u001b[39;00m error\n\u001b[0;32m    824\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    825\u001b[0m     \u001b[39m# this trait caused an error\u001b[39;00m\n\u001b[0;32m    826\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    827\u001b[0m         \u001b[39m# this is not the root trait\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:2881\u001b[0m, in \u001b[0;36mContainer.validate_elements\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m   2879\u001b[0m \u001b[39mfor\u001b[39;00m v \u001b[39min\u001b[39;00m value:\n\u001b[0;32m   2880\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 2881\u001b[0m         v \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_trait\u001b[39m.\u001b[39;49m_validate(obj, v)\n\u001b[0;32m   2882\u001b[0m     \u001b[39mexcept\u001b[39;00m TraitError \u001b[39mas\u001b[39;00m error:\n\u001b[0;32m   2883\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39merror(obj, v, error)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:738\u001b[0m, in \u001b[0;36mTraitType._validate\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m    736\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n\u001b[0;32m    737\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mvalidate\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m--> 738\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalidate(obj, value)\n\u001b[0;32m    739\u001b[0m \u001b[39mif\u001b[39;00m obj\u001b[39m.\u001b[39m_cross_validation_lock \u001b[39mis\u001b[39;00m \u001b[39mFalse\u001b[39;00m:\n\u001b[0;32m    740\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_cross_validate(obj, value)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:2151\u001b[0m, in \u001b[0;36mInstance.validate\u001b[1;34m(self, obj, value)\u001b[0m\n\u001b[0;32m   2149\u001b[0m     \u001b[39mreturn\u001b[39;00m value\n\u001b[0;32m   2150\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 2151\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror(obj, value)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\traitlets\\traitlets.py:828\u001b[0m, in \u001b[0;36mTraitType.error\u001b[1;34m(self, obj, value, error, info)\u001b[0m\n\u001b[0;32m    824\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    825\u001b[0m     \u001b[39m# this trait caused an error\u001b[39;00m\n\u001b[0;32m    826\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    827\u001b[0m         \u001b[39m# this is not the root trait\u001b[39;00m\n\u001b[1;32m--> 828\u001b[0m         \u001b[39mraise\u001b[39;00m TraitError(value, info \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39minfo(), \u001b[39mself\u001b[39m)\n\u001b[0;32m    829\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    830\u001b[0m         \u001b[39m# this is the root trait\u001b[39;00m\n\u001b[0;32m    831\u001b[0m         \u001b[39mif\u001b[39;00m obj \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mTraitError\u001b[0m: The 'children' trait of a Tab instance contains an Instance of a TypedTuple which expected a Widget, not the FileWidget at '0x1b8bed66510'."
+     ]
     }
    ],
    "source": [
     "from pyTEMlib import info_widget\n",
-    "datasets = {} # fileWidget.datasets\n",
+    "datasets = fileWidget.datasets\n",
     "infoWidget= info_widget.InfoWidget(datasets)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
