--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "hideCode": true,
     "hidePrompt": false
@@ -124,12 +124,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor installed.     If you wish to open igor files, you will need to install it     (pip install igor) before attempting.\n",
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
       "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
       "Symmetry functions of spglib enabled\n",
       "SimpleITK not installed; Registration Functions for Image Stacks not available\n",
       "install with: conda install -c simpleitk simpleitk \n",
-      "pyTEMlib version:  0.2023.5.1\n"
+      "pyTEMlib version:  0.2023.8.0\n"
      ]
     }
    ],
@@ -143,8 +143,14 @@
     "    from google.colab import output\n",
     "    output.enable_custom_widget_manager()\n",
     "    from google.colab import drive\n",
-    "else:\n",
-    "    %gui qt5\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(0, '../../../')\n",
+    "\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft     # File input/ output library\n",
@@ -182,22 +188,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1824cedc141e47e0b21a232e23b6501a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Dropdown(description='directory:', layout=Layout(width='90%'), options=('C:\\\\Users\\\\gduscher\\\\D…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NotImplementedError",
+     "evalue": "Cannot ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     datasets \u001b[39m=\u001b[39m ft\u001b[39m.\u001b[39mopen_file(\u001b[39m'\u001b[39m\u001b[39m../../example_data/EELS_STO3.hf5\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[39melse\u001b[39;00m:  \n\u001b[1;32m----> 7\u001b[0m     fileWidget \u001b[39m=\u001b[39m ft\u001b[39m.\u001b[39;49mFileWidget()\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\Documents\\Github\\pyTEMlib\\notebooks\\EELS\\../..\\pyTEMlib\\file_tools.py:107\u001b[0m, in \u001b[0;36mFileWidget.__init__\u001b[1;34m(self, dir_name, extension)\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdatasets \u001b[39m=\u001b[39m{}\n\u001b[0;32m     99\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    101\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mselect_files \u001b[39m=\u001b[39m widgets\u001b[39m.\u001b[39mSelect(\n\u001b[0;32m    102\u001b[0m     options\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdir_list,\n\u001b[0;32m    103\u001b[0m     value\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdir_list[\u001b[39m0\u001b[39m],\n\u001b[0;32m    104\u001b[0m     description\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mSelect file:\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m    105\u001b[0m     disabled\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m    106\u001b[0m     rows\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m,\n\u001b[1;32m--> 107\u001b[0m     layout\u001b[39m=\u001b[39mwidgets\u001b[39m.\u001b[39;49mLayout(width\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m70\u001b[39;49m\u001b[39m%\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m    108\u001b[0m )\n\u001b[0;32m    110\u001b[0m select_button \u001b[39m=\u001b[39m widgets\u001b[39m.\u001b[39mButton(description\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mSelect Main\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m    111\u001b[0m              layout\u001b[39m=\u001b[39mwidgets\u001b[39m.\u001b[39mLayout(width\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m'\u001b[39m, grid_area\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mheader\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[0;32m    112\u001b[0m              style\u001b[39m=\u001b[39mwidgets\u001b[39m.\u001b[39mButtonStyle(button_color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlightblue\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m    114\u001b[0m add_button \u001b[39m=\u001b[39m widgets\u001b[39m.\u001b[39mButton(description\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mAdd\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m    115\u001b[0m              layout\u001b[39m=\u001b[39mwidgets\u001b[39m.\u001b[39mLayout(width\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mauto\u001b[39m\u001b[39m'\u001b[39m, grid_area\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mheader\u001b[39m\u001b[39m'\u001b[39m),\n\u001b[0;32m    116\u001b[0m              style\u001b[39m=\u001b[39mwidgets\u001b[39m.\u001b[39mButtonStyle(button_color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mlightblue\u001b[39m\u001b[39m'\u001b[39m))\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\lib\\site-packages\\ipywidgets\\widgets\\widget_layout.py:86\u001b[0m, in \u001b[0;36mLayout.__init__\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     83\u001b[0m     \u001b[39mfor\u001b[39;00m side \u001b[39min\u001b[39;00m [\u001b[39m'\u001b[39m\u001b[39mtop\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mright\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mbottom\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mleft\u001b[39m\u001b[39m'\u001b[39m]:\n\u001b[0;32m     84\u001b[0m         kwargs\u001b[39m.\u001b[39msetdefault(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mborder_\u001b[39m\u001b[39m{\u001b[39;00mside\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m, border)\n\u001b[1;32m---> 86\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\lib\\site-packages\\ipywidgets\\widgets\\widget.py:504\u001b[0m, in \u001b[0;36mWidget.__init__\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m    501\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    503\u001b[0m Widget\u001b[39m.\u001b[39m_call_widget_constructed(\u001b[39mself\u001b[39m)\n\u001b[1;32m--> 504\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mopen()\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\lib\\site-packages\\ipywidgets\\widgets\\widget.py:535\u001b[0m, in \u001b[0;36mWidget.open\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    531\u001b[0m         \u001b[39mfrom\u001b[39;00m \u001b[39mipykernel\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcomm\u001b[39;00m \u001b[39mimport\u001b[39;00m Comm\n\u001b[0;32m    533\u001b[0m         \u001b[39mreturn\u001b[39;00m Comm(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m--> 535\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcomm \u001b[39m=\u001b[39m create_comm(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39margs)\n",
+      "File \u001b[1;32mc:\\Users\\gduscher\\AppData\\Local\\anaconda3\\lib\\site-packages\\comm\\__init__.py:27\u001b[0m, in \u001b[0;36m_create_comm\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_create_comm\u001b[39m(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m     23\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Create a Comm.\u001b[39;00m\n\u001b[0;32m     24\u001b[0m \n\u001b[0;32m     25\u001b[0m \u001b[39m    This method is intended to be replaced, so that it returns your Comm instance.\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 27\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCannot \u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNotImplementedError\u001b[0m: Cannot "
+     ]
     }
    ],
    "source": [
