update notebooks for google colab

--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "hideCode": true,
     "hidePrompt": false
@@ -218,9 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
-      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
-      "Symmetry functions of spglib enabled\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "pyTEMlib version:  0.2023.8.1\n"
      ]
     }
@@ -277,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5cb907035e04a76b186f347db76637e",
+       "model_id": "be2eb2c708914aa7b1a3617603884b0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -307,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2176f295e3e748168768239cc559f5e7",
+       "model_id": "6ca831c917e545f2bf6dcfe3c53e632f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,6 +328,26 @@
     "if not load_example:\n",
     "    datasets = fileWidget.datasets\n",
     "infoWidget= ieels.InfoWidget(datasets)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 2.8288232797477015e-07)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "infoWidget.change_y_scale, infoWidget.y_scale "
    ]
   },
   {
@@ -384,7 +403,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "datasets['Channel_000'].metadata['edges']={}\n",
+    "plt.close('all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -392,7 +423,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5042d7a3b4474d91828f8acbed390afd",
+       "model_id": "13b5760319ba42dc9cd6bb4fe25c756d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -405,8 +436,160 @@
     }
    ],
    "source": [
-    "datasets['Channel_000'].metadata['edges']={}\n",
     "compositionWidget = ieels.CompositionWidget(datasets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1/compositionWidget.dataset.metadata['experiment']['flux_ppm']*0.03\n",
+    "compositionWidget.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Al',\n",
+       " 'barns': 448039000000.0,\n",
+       " 'NumEdges': 5,\n",
+       " 'atomic_weight': 26.9815,\n",
+       " 'nominal_density': 2.6941,\n",
+       " 'photoabs_to_sigma': 44.8039,\n",
+       " 'lines': {'K-L3': {'weight': 1.0, 'position': 1486.5000000000002},\n",
+       "  'K-L2': {'weight': 0.505, 'position': 1486.5000000000002}},\n",
+       " 'M1': {'filename': 'None',\n",
+       "  'excl before': 5,\n",
+       "  'excl after': 50,\n",
+       "  'onset': 8.37567,\n",
+       "  'factor': 1.0},\n",
+       " 'L3': {'filename': 'Al.L3',\n",
+       "  'excl before': 5,\n",
+       "  'excl after': 50,\n",
+       "  'onset': 73.1,\n",
+       "  'factor': 1.0,\n",
+       "  'twin': 'L2'},\n",
+       " 'L2': {'filename': 'None',\n",
+       "  'excl before': 5,\n",
+       "  'excl after': 50,\n",
+       "  'onset': 73.1,\n",
+       "  'factor': 0.5},\n",
+       " 'L1': {'filename': 'Al.L1',\n",
+       "  'excl before': 5,\n",
+       "  'excl after': 50,\n",
+       "  'onset': 117.7,\n",
+       "  'factor': 1.0},\n",
+       " 'K1': {'filename': 'Al.K1',\n",
+       "  'excl before': 5,\n",
+       "  'excl after': 50,\n",
+       "  'onset': 1559.6,\n",
+       "  'factor': 1.0,\n",
+       "  'shape': 'hydrogenic'},\n",
+       " 'dat': array([0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 8.56605764e+15,\n",
+       "        7.39846801e+15, 1.19953481e+15, 9.20272106e+14, 7.81738447e+14,\n",
+       "        7.21297986e+14, 7.10769070e+14, 7.37068959e+14, 7.94283539e+14,\n",
+       "        8.79769380e+14, 9.92406385e+14, 1.13116406e+15, 1.29429506e+15,\n",
+       "        1.47875272e+15, 1.67960860e+15, 1.89009733e+15, 2.10175095e+15,\n",
+       "        2.30480222e+15, 2.48921508e+15, 2.64549108e+15, 2.76104034e+15,\n",
+       "        2.82493070e+15, 2.83796863e+15, 2.80432090e+15, 2.73084251e+15,\n",
+       "        2.62259629e+15, 2.48155361e+15, 2.32088682e+15, 2.14857102e+15,\n",
+       "        1.97159562e+15, 1.79578512e+15, 1.70801428e+15, 1.66943812e+15,\n",
+       "        1.65935724e+15, 3.73565957e+16, 3.78991710e+16, 3.84404021e+16,\n",
+       "        4.31546684e+16, 4.85674276e+16, 5.23892003e+16, 5.43784934e+16,\n",
+       "        5.45935522e+16, 5.32673567e+16, 5.17305829e+16, 5.10854068e+16,\n",
+       "        5.09061912e+16, 5.57494928e+16, 5.56688458e+16, 5.49519834e+16,\n",
+       "        5.22637493e+16, 4.82269180e+16, 4.38912446e+16, 3.94807486e+16,\n",
+       "        3.51679252e+16, 3.10750890e+16, 2.72779584e+16, 2.38150650e+16,\n",
+       "        2.06985057e+16, 1.79233522e+16, 1.54725788e+16, 1.33219916e+16,\n",
+       "        1.14451563e+16, 9.81339822e+15, 8.39669890e+15, 7.17131223e+15,\n",
+       "        6.11438823e+15, 5.20576514e+15, 4.42586365e+15, 3.75833035e+15,\n",
+       "        3.18788709e+15, 2.70086870e+15, 2.28571576e+15, 1.93243701e+15,\n",
+       "        1.63238529e+15, 1.37785434e+15, 1.16234758e+15, 9.80085312e+14,\n",
+       "        8.26139112e+14, 6.96207802e+14, 5.86707070e+14, 4.94500644e+14,\n",
+       "        4.11649272e+14, 3.42897688e+14, 2.85889206e+14, 2.38571807e+14,\n",
+       "        1.98996522e+14, 1.65451842e+14, 1.54394239e+14, 1.48085850e+14,\n",
+       "        1.46463949e+14, 1.80824060e+15, 1.77194944e+15, 1.76809631e+15,\n",
+       "        1.56087827e+15, 1.31768270e+15, 1.09572418e+15, 9.11132110e+14,\n",
+       "        7.63503260e+14, 6.40830182e+14, 5.38453270e+14, 4.52384978e+14,\n",
+       "        3.79780258e+14, 3.17686533e+14, 2.63276677e+14, 2.18087464e+14,\n",
+       "        1.80667246e+14, 1.49667428e+14, 1.23994793e+14, 1.02730862e+14,\n",
+       "        8.51184492e+13, 7.05258190e+13, 5.84377268e+13, 4.84240551e+13,\n",
+       "        4.01254768e+13, 3.31647429e+13, 2.72770624e+13, 2.24346568e+13,\n",
+       "        1.84529343e+13, 1.51499907e+13, 1.23555715e+13, 1.00768451e+13,\n",
+       "        8.21837938e+12, 6.70311148e+12, 5.46697188e+12, 4.45924256e+12,\n",
+       "        3.63718060e+12, 2.96673504e+12, 2.41985864e+12, 1.97388062e+12,\n",
+       "        1.61007295e+12, 1.31338152e+12, 1.07135086e+12, 8.73944873e+11,\n",
+       "        7.12919657e+11, 5.81554622e+11, 4.72322714e+11, 3.83041982e+11,\n",
+       "        3.10647841e+11, 2.51475330e+11, 2.03154324e+11, 1.64116686e+11,\n",
+       "        1.32579220e+11, 1.07103723e+11, 8.65252917e+10, 6.99030448e+10,\n",
+       "        5.64663552e+10, 4.56103702e+10, 3.68409029e+10, 2.97574063e+10,\n",
+       "        2.40359482e+10, 1.94148740e+10, 1.56822611e+10, 1.26669586e+10,\n",
+       "        1.02318666e+10, 8.26497543e+09]),\n",
+       " 'ene': array([8.208152e+00, 8.333787e+00, 8.367290e+00, 8.417543e+00,\n",
+       "        8.543178e+00, 1.069000e+01, 1.142761e+01, 1.221612e+01,\n",
+       "        1.305903e+01, 1.396010e+01, 1.492335e+01, 1.595306e+01,\n",
+       "        1.705382e+01, 1.823053e+01, 1.948844e+01, 2.083314e+01,\n",
+       "        2.227063e+01, 2.380730e+01, 2.545001e+01, 2.720606e+01,\n",
+       "        2.908327e+01, 3.109002e+01, 3.323523e+01, 3.552846e+01,\n",
+       "        3.797993e+01, 4.060054e+01, 4.340198e+01, 4.639671e+01,\n",
+       "        4.959809e+01, 5.302035e+01, 5.667876e+01, 6.058959e+01,\n",
+       "        6.477028e+01, 6.923942e+01, 7.163800e+01, 7.273450e+01,\n",
+       "        7.302690e+01, 7.346550e+01, 7.401695e+01, 7.456200e+01,\n",
+       "        7.912411e+01, 8.458368e+01, 9.041995e+01, 9.665893e+01,\n",
+       "        1.033284e+02, 1.104581e+02, 1.153460e+02, 1.171115e+02,\n",
+       "        1.175823e+02, 1.180797e+02, 1.182885e+02, 1.200540e+02,\n",
+       "        1.262272e+02, 1.349368e+02, 1.442475e+02, 1.542005e+02,\n",
+       "        1.648404e+02, 1.762144e+02, 1.883732e+02, 2.013709e+02,\n",
+       "        2.152655e+02, 2.301188e+02, 2.459970e+02, 2.629708e+02,\n",
+       "        2.811158e+02, 3.005128e+02, 3.212482e+02, 3.434143e+02,\n",
+       "        3.671099e+02, 3.924405e+02, 4.195189e+02, 4.484657e+02,\n",
+       "        4.794098e+02, 5.124891e+02, 5.478508e+02, 5.856525e+02,\n",
+       "        6.260625e+02, 6.692609e+02, 7.154399e+02, 7.648052e+02,\n",
+       "        8.175768e+02, 8.739896e+02, 9.342948e+02, 9.987612e+02,\n",
+       "        1.067676e+03, 1.141345e+03, 1.220098e+03, 1.304285e+03,\n",
+       "        1.394281e+03, 1.490486e+03, 1.528408e+03, 1.551802e+03,\n",
+       "        1.558040e+03, 1.567398e+03, 1.590792e+03, 1.593329e+03,\n",
+       "        1.703269e+03, 1.820795e+03, 1.946430e+03, 2.080733e+03,\n",
+       "        2.224304e+03, 2.377781e+03, 2.541848e+03, 2.717235e+03,\n",
+       "        2.904724e+03, 3.105150e+03, 3.319406e+03, 3.548445e+03,\n",
+       "        3.793288e+03, 4.055024e+03, 4.334821e+03, 4.633924e+03,\n",
+       "        4.953664e+03, 5.295467e+03, 5.660855e+03, 6.051453e+03,\n",
+       "        6.469004e+03, 6.915365e+03, 7.392525e+03, 7.902609e+03,\n",
+       "        8.447890e+03, 9.030794e+03, 9.653919e+03, 1.032004e+04,\n",
+       "        1.103212e+04, 1.179334e+04, 1.260708e+04, 1.347697e+04,\n",
+       "        1.440688e+04, 1.540095e+04, 1.646362e+04, 1.759961e+04,\n",
+       "        1.881398e+04, 2.011215e+04, 2.149988e+04, 2.298338e+04,\n",
+       "        2.456923e+04, 2.626450e+04, 2.807676e+04, 3.001405e+04,\n",
+       "        3.208502e+04, 3.429889e+04, 3.666551e+04, 3.919543e+04,\n",
+       "        4.189992e+04, 4.479101e+04, 4.788159e+04, 5.118542e+04,\n",
+       "        5.471721e+04, 5.849270e+04, 6.252870e+04, 6.684318e+04,\n",
+       "        7.145536e+04, 7.638578e+04, 8.165640e+04, 8.729069e+04,\n",
+       "        9.331374e+04, 9.975239e+04])}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pyTEMlib.eels_tools\n",
+    "x_sections = pyTEMlib.eels_tools.get_x_sections(13)\n",
+    "x_sections"
    ]
   },
   {
@@ -559,13 +742,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f0786291e5a2452aae0165ef42faa00c",
+       "model_id": "fb60183c48a84e68846c6162a81ca8e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -583,6 +766,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'z': 22,\n",
+       " 'symmetry': 'L3',\n",
+       " 'element': 'Ti',\n",
+       " 'onset': 455.5,\n",
+       " 'end_exclude': 505.5,\n",
+       " 'start_exclude': 450.5,\n",
+       " 'all_edges': {'L3': {'onset': 455.5},\n",
+       "  'L2': {'onset': 461.5},\n",
+       "  'L1': {'onset': 563.6999999999999}},\n",
+       " 'chemical_shift': 0.0,\n",
+       " 'areal_density': 7321568622261.2295,\n",
+       " 'original_onset': 455.5,\n",
+       " 'data': array([1.10801890e-09, 1.10556278e-09, 1.10310666e-09, ...,\n",
+       "        4.40886101e-10, 4.40394599e-10, 4.39903096e-10]),\n",
+       " 'X_section_type': 'XRPA',\n",
+       " 'X_section_source': 'pyTEMlib'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peakFitWidget.dataset.metadata['edges']['0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peakFitWidget.fit_peaks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found_whiteline\n",
+      "found_whiteline\n",
+      "found_whiteline\n",
+      "\n",
+      "{'Ti-L2': 1378553.3487112543} {}\n"
+     ]
+    }
+   ],
+   "source": [
+    "peakFitWidget.find_white_lines()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -591,21 +839,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak  0: position:   540.6, area: -2171440.358 associated edge: O-K1\n",
-      "peak  1: position:   540.6, area:  2044736.464 associated edge: O-K1\n",
-      "peak  2: position:   462.3, area:  1019741.883 associated edge: Ti-L2\n",
-      "peak  3: position:   475.4, area:  -421663.981 associated edge: Ti-L2\n",
-      "peak  4: position:   457.3, area:   364278.003 associated edge: Ti-L3\n",
-      "peak  5: position:   454.9, area:   266951.091 associated edge: \n",
-      "peak  6: position:   559.7, area:  -229694.131 associated edge: O-K1\n",
-      "peak  7: position:   356.7, area:   147740.995 associated edge: \n"
+     "ename": "NameError",
+     "evalue": "name 'peakFitWidget' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[92], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m areas \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m p, peak \u001b[38;5;129;01min\u001b[39;00m \u001b[43mpeakFitWidget\u001b[49m\u001b[38;5;241m.\u001b[39mpeaks[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpeaks\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      3\u001b[0m     area \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mpi)\u001b[38;5;241m*\u001b[39m peak[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mamplitude\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(peak[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwidth\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mlog(\u001b[38;5;241m2\u001b[39m))) \n\u001b[0;32m      4\u001b[0m     areas\u001b[38;5;241m.\u001b[39mappend(area)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'peakFitWidget' is not defined"
      ]
     }
    ],
@@ -663,17 +908,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 93,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot overwrite file. Using:  EELS_STO3-1.hf5\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\pyNSID\\io\\hdf_utils.py:376: FutureWarning: validate_h5_dimension may be removed in a future version\n",
+      "C:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\pyNSID\\io\\hdf_utils.py:376: FutureWarning: validate_h5_dimension may be removed in a future version\n",
+      "  warn('validate_h5_dimension may be removed in a future version',\n",
+      "C:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\pyNSID\\io\\hdf_io.py:111: UserWarning: main_data_name should not contain the \"-\" character. Reformatted name from:ronchigram-0.5mu to ronchigram_0.5mu\n",
+      "  warn('main_data_name should not contain the \"-\" character. Reformatted'\n",
+      "C:\\Users\\gduscher\\AppData\\Local\\anaconda3\\envs\\pyTEMlib\\Lib\\site-packages\\pyNSID\\io\\hdf_utils.py:376: FutureWarning: validate_h5_dimension may be removed in a future version\n",
       "  warn('validate_h5_dimension may be removed in a future version',\n"
      ]
     }
