--- a/notebooks/EELS/Analysis_Core_Loss.ipynb
+++ b/notebooks/EELS/Analysis_Core_Loss.ipynb
@@ -208,38 +208,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "hideCode": true,
-    "hidePrompt": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "pyTEMlib version:  0.2023.8.1\n"
+      "You don't have igor2 installed.     If you wish to open igor files, you will need to install it     (pip install igor2) before attempting.\n",
+      "You don't have gwyfile installed.     If you wish to open .gwy files, you will need to      install it (pip install gwyfile) before attempting.\n",
+      "Symmetry functions of spglib enabled\n",
+      "pyTEM version:  0.2023.8.1\n"
      ]
     }
    ],
    "source": [
-    "%matplotlib ipympl\n",
+    "%matplotlib widget\n",
     "import numpy as np\n",
-    "import matplotlib.pylab as plt \n",
-    "import sys\n",
-    "\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    from google.colab import output\n",
-    "    output.enable_custom_widget_manager()\n",
-    "    from google.colab import drive\n",
+    "import matplotlib.pylab as plt\n",
     "\n",
     "import sys\n",
     "sys.path.insert(0, '../..')\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import pyTEMlib\n",
     "import pyTEMlib.file_tools as ft     # File input/ output library\n",
     "import pyTEMlib.image_tools as it\n",
@@ -248,13 +237,10 @@
     "import pyTEMlib.interactive_eels as ieels  # Dialogs for EELS input and quantification\n",
     "\n",
     "# For archiving reasons it is a good idea to print the version numbers out at this point\n",
-    "print('pyTEMlib version: ', pyTEMlib.__version__)\n",
+    "print('pyTEM version: ', pyTEMlib.__version__)\n",
     "\n",
-    "__notebook__ = 'analyze_core_loss'\n",
-    "__notebook_version__ = '2023_05_21'\n",
-    "\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    drive.mount(\"/content/drive\")"
+    "__notebook__ = 'analyse_core_loss'\n",
+    "__notebook_version__ = '2022_09_24'"
    ]
   },
   {
