--- a/notebooks/Imaging/Adaptive_Fourier_Filter.ipynb
+++ b/notebooks/Imaging/Adaptive_Fourier_Filter.ipynb
@@ -50,6 +50,27 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "'0.12.1'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sidpy\n",
+    "sidpy.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -91,6 +112,13 @@
     "Please note, that we only need to load the pyTEMlib library, which is based on sidpy Datsets. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
